<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2014-2015 Daniel Pedraza-Arcega
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name" translatable="false">RoX</string>

    <!-- SignInActivity -->
    <string name="title_activity_sign_in">Connect to Foursquare</string>
    <string name="label_connect_to_foursquare">CONNECT TO</string>
    <string name="foursquare_not_installed_message">To do this, you’ll need the latest version of Foursquare installed</string>
    <string name="foursquare_auth_canceled">Authentication canceled</string>
    <string name="foursquare_auth_denied">Authentication denied</string>
    <string name="foursquare_oauth_error_message_format">Authentication error: %1$s [%2$s]</string>
    <string name="foursquare_unknown_error_message_format">Unknown error: %s</string>
    <string name="register_in_progress">Registering&#8230;</string>
    <string name="continue_wo_sign_in">Continue without sign in</string>
    <string name="sign_in_why">Sign in with your Foursquare account to get personalized recommedations</string>

    <!-- SettingsActivity -->
    <string name="title_activity_settings">Settings</string>

    <!-- ExploreFragment -->
    <string name="explore_title">Explore</string>
    <string name="searching_recommendations">Searching recommendations in the area&#8230;</string>
    <string name="waiting_location_update">Waiting for location&#8230;</string>
    <string name="location_update_timeout">Location update timeout</string>
    <string name="enable_location_updates">Enable location providers</string>
    <string name="search_for_places">Search by categories</string>
    <string name="build_route">View recommended route</string>

    <!-- RecommendedRouteFragment -->
    <string name="recommended_route_title">Recommended route</string>
    <string name="building_route">Building route&#8230;</string>
    <string name="unavailable_route">Unavailable route. Choose a different travel mode.</string>
    <string name="walking_directions_button_label">Walking</string>
    <string name="bike_directions_button_label">Biking</string>
    <string name="transit_directions_button_label">Transit</string>
    <string name="driving_directions_button_label">Driving</string>
    <string name="travel_distance">Distance: %.2f km</string>
    <string name="travel_time">Time: %s</string>
    <string name="long_time_format" translatable="false">H\' h \'m\' m\'</string>
    <string name="short_time_format" translatable="false">m\' m\'</string>

    <!-- ProfileFragments -->
    <string name="profile_title" translatable="false"></string>
    <string name="profile_user_friends_tab">Friends</string>
    <string name="profile_user_likes_tab">Likes</string>
    <string name="no_friends_found">No friends yet :(</string>
    <string name="no_likes_found">No likes yet :(</string>
    <string name="add_more_likes">Add more likes</string>

    <string name="current_location">Current location</string>
    <string name="remove_item">Remove</string>

    <!-- Drawer -->
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="drawer_explore_option">Explore</string>
    <string name="drawer_settings_option">Settings</string>
    <string name="view_profile">View Profile</string>

    <!-- Settings -->
    <string name="app_preferences">App settings</string>
    <string name="about_preferences">About</string>
    <string name="close_session_title">Close session</string>
    <string name="close_session_summary">Closes session and deletes all stored data</string>
    <string name="close_session_alert_message">Closing session will delete all RoX related data in this device. Do you really want to close session?</string>
    <string name="github_title">RoX on GitHub</string>
    <string name="github_summary">Library code and wikis</string>
    <string name="licenses_title">Licenses</string>
    <string name="licenses_summary">License details for open source software</string>
    <string name="licenses_dialog_tile">Open source licenses</string>
    <string name="app_version_title">App version</string>

    <!-- Errors -->
    <string name="network_unavailable">A stable connection is required to perform request</string>
</resources>