<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:cv="http://schemas.android.com/apk/res-auto"
                xmlns:fab="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <FrameLayout
                android:id="@+id/map_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ProgressBar
                android:id="@+id/recalculating_route_progress_bar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"/>
        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/list_overlap_negative"
            android:layout_weight="1"
            cv:cardCornerRadius="4dp"
            cv:cardElevation="4dp"
            cv:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/route_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <LinearLayout
                    android:id="@+id/building_route_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <ProgressBar
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:text="@string/building_route"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>
                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/drop_shadow"/>

    <com.getbase.floatingactionbutton.CustomFloatingActionsMenu
        android:id="@+id/directions_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        fab:fab_addButtonColorNormal="@color/accent"
        fab:fab_addButtonColorPressed="@color/accent_dark"
        fab:fab_collapsedIcon="@drawable/ic_directions"
        fab:fab_labelStyle="@style/fam_labels">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/walking_directions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/accent"
            fab:fab_colorPressed="@color/accent_dark"
            fab:fab_icon="@drawable/ic_directions_walk"
            fab:fab_title="@string/walking_directions_button_label"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/bike_directions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/accent"
            fab:fab_colorPressed="@color/accent_dark"
            fab:fab_icon="@drawable/ic_directions_bike"
            fab:fab_title="@string/bike_directions_button_label"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/transit_directions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/accent"
            fab:fab_colorPressed="@color/accent_dark"
            fab:fab_icon="@drawable/ic_directions_bus"
            fab:fab_title="@string/transit_directions_button_label"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/driving_directions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/accent"
            fab:fab_colorPressed="@color/accent_dark"
            fab:fab_icon="@drawable/ic_directions_car"
            fab:fab_title="@string/driving_directions_button_label"/>
    </com.getbase.floatingactionbutton.CustomFloatingActionsMenu>
</RelativeLayout>